--- a/qodana.yaml
+++ b/qodana.yaml
@@ -26,6 +26,6 @@ profile:
 #  - id: <plugin.id> #(plugin id can be found at https://plugins.jetbrains.com)
 
 #Specify Qodana linter for analysis (Applied in CI/CD pipeline)
-linter: jetbrains/qodana-jvm:latest
+linter: jetbrains/qodana-jvm-community:2024.1
 
 fixesStrategy: apply
