--- a/.github/workflows/qodana_code_quality.yml
+++ b/.github/workflows/qodana_code_quality.yml
@@ -7,6 +7,7 @@ on:
       - main # The 'main' branch
       - master # The 'master' branch
       - 'releases/*' # The release branches
+      - 'feature/*' # For --apply-fixes pull-request ;)
 
 jobs:
   qodana:
@@ -22,5 +23,9 @@ jobs:
           fetch-depth: 0  # a full history is required for pull request analysis
       - name: 'Qodana Scan'
         uses: JetBrains/qodana-action@v2024.1
+        with:
+          pr-mode: false
+          args: --apply-fixes
+          push-fixes: pull-request        
         env:
           QODANA_TOKEN: ${{ secrets.QODANA_TOKEN }}
