--- a/.github/workflows/qodana_code_quality.yml
+++ b/.github/workflows/qodana_code_quality.yml
@@ -2,12 +2,10 @@ name: Qodana
 on:
   workflow_dispatch:
   pull_request:
+    branches: [master] 
   push:
     branches: # Specify your branches here
-      - main # The 'main' branch
       - master # The 'master' branch
-      - 'releases/*' # The release branches
-      - 'feature/*' # For --apply-fixes pull-request ;)
 
 jobs:
   qodana:
@@ -29,4 +27,4 @@ jobs:
           push-fixes: pull-request        
         env:
           QODANA_TOKEN: ${{ secrets.QODANA_TOKEN }}
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          #GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
