--- a/qodana.yaml
+++ b/qodana.yaml
@@ -26,7 +26,7 @@ profile:
 #  - id: <plugin.id> #(plugin id can be found at https://plugins.jetbrains.com)
 
 #Specify Qodana linter for analysis (Applied in CI/CD pipeline)
-linter: jetbrains/qodana-jvm-community:2024.1
+linter: jetbrains/qodana-jvm-community:2024.1-eap
 
-#fixesStrategy: apply
-fixesStrategy: cleanup/apply
+fixesStrategy: apply
+#fixesStrategy: cleanup/apply
