--- a/.github/workflows/qodana_code_quality.yml
+++ b/.github/workflows/qodana_code_quality.yml
@@ -24,7 +24,8 @@ jobs:
         uses: JetBrains/qodana-action@v2024.1
         with: 
           pr-mode: false 
-          args: --apply-fixes 
+          #args: --apply-fixes
+          args: --cleanup
           push-fixes: pull-request        
         env:
           QODANA_TOKEN: ${{ secrets.QODANA_TOKEN }}
