--- a/.github/workflows/qodana_code_quality.yml
+++ b/.github/workflows/qodana_code_quality.yml
@@ -28,4 +28,4 @@ jobs:
           push-fixes: pull-request        
         env:
           QODANA_TOKEN: ${{ secrets.QODANA_TOKEN }}
-          #GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
